k8s/apps/external-name/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: homeassistant.stg.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant-svc
            port:
              number: 80
  tls:
  - secretName: homeassistant-rajsingh-info-tls
    hosts:
    - homeassistant.stg.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvm-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"  
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: kvm.stg.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kvm-svc
            port:
              number: 443
  tls:
  - secretName: kvm-rajsingh-info-tls
    hosts:
    - kvm.stg.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"  
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: proxmox.stg.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox-svc
            port:
              number: 8006
  tls:
  - secretName: proxmox-rajsingh-info-tls
    hosts:
    - proxmox.stg.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: router.stg.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-svc
            port:
              number: 80
  tls:
  - secretName: router-rajsingh-info-tls
    hosts:
    - router.stg.rajsingh.info
